# nmp

./: .gitignore  AGENTS.md  Cargo.toml  LICENSE  README.md  episodes.json  feed.xml  index.html
benchmarks/nostr-event-corpus/: .gitignore  Cargo.toml  README.md  capture-2026-07-10.sh  run-production-matrix.sh
benchmarks/nostr-event-corpus/src/: analyze.rs  capture.rs  main.rs
benchmarks/nostrdb-compare/: Cargo.toml  build.rs
benchmarks/nostrdb-compare/src/: main.rs  nostrdb_bridge.c
crates/nmp-audit/: Cargo.toml
crates/nmp-audit/src/: lib.rs
crates/nmp-audit/tests/: workspace_audit.rs
crates/nmp-bdd/: Cargo.toml
crates/nmp-bdd/src/: lib.rs  reference_fixtures.rs  relays.rs  world.rs
crates/nmp-bdd/tests/: bdd.rs
crates/nmp-blossom/: Cargo.toml
crates/nmp-blossom/src/: auth.rs  client.rs  descriptor.rs  lib.rs  server_list.rs  sha256.rs
crates/nmp-blossom/tests/: mirror_delete_list_contract.rs  server_list_lifecycle.rs  upload_contract.rs
crates/nmp-consumer-check/: Cargo.toml
crates/nmp-consumer-check/src/: lib.rs
crates/nmp-consumer-check/tests/: git_dependency.rs
crates/nmp-content/: Cargo.toml
crates/nmp-content/src/: article.rs  document.rs  hydration.rs  lib.rs  parse.rs  profile.rs  reference.rs
crates/nmp-content/tests/: dependency_boundary.rs
crates/nmp-engine/: Cargo.toml
crates/nmp-engine/examples/: affected_handles_bench.rs  incremental_delta_bench.rs  local_mutation_delta_bench.rs  relay_ingest_bench.rs
crates/nmp-engine/src/: ingest_attribution.rs  lib.rs  relay_information.rs
crates/nmp-engine/tests/: core_headless.rs  correlation_restart.rs  diagnostics_headless.rs  discovery_churn.rs  durable_accepted_restart.rs  durable_history_retention.rs  freshness.rs  history_session.rs  integration_capstone.rs  negentropy_live.rs  nip46_restart.rs  nip51_headless.rs  pinned_host_write.rs  relay_ingest_smoke.rs  row_provenance_headless.rs  runtime_integration.rs  self_bootstrap_outbox.rs  signer_registry_headless.rs
crates/nmp-ffi/: Cargo.toml  build.rs  uniffi-bindgen.rs
crates/nmp-ffi/src/: auth.rs  blossom.rs  content.rs  convert.rs  entity.rs  facade.rs  lib.rs  media.rs  nip02.rs  nip22.rs  nip29.rs  nip51.rs  observer.rs  reference.rs  signer.rs  types.rs
crates/nmp-ffi/tests/: async_observation_falsifiers.rs  composition_29er.rs  consumer_isolation.rs  foreign_blocking_704.rs  mixed_load_704.rs  parked_nip11_704.rs  receipt_detach_reattach.rs  surface_audit_704.rs  thread_scaling.rs
crates/nmp-grammar/: Cargo.toml
crates/nmp-grammar/src/: binding.rs  concrete.rs  demand.rs  descriptor.rs  indexed_tag_name.rs  lib.rs  nip19.rs  reference.rs  relay.rs  selector.rs  tag_name.rs  write.rs
crates/nmp-media/: Cargo.toml
crates/nmp-media/src/: compose.rs  lib.rs  prepare.rs  upload.rs
crates/nmp-media/tests/: composition.rs
crates/nmp-nip02/: Cargo.toml
crates/nmp-nip02/src/: claims.rs  demand.rs  edit.rs  lib.rs  service.rs
crates/nmp-nip22/: Cargo.toml
crates/nmp-nip22/src/: build.rs  decode.rs  demand.rs  intent.rs  lib.rs  root.rs  target.rs
crates/nmp-nip29/: Cargo.toml
crates/nmp-nip29/src/: demand.rs  group_ref.rs  lib.rs  message.rs  send.rs
crates/nmp-nip51/: Cargo.toml
crates/nmp-nip51/src/: claims.rs  demand.rs  edit.rs  lib.rs  service.rs  simple_groups.rs
crates/nmp-nip65/: Cargo.toml
crates/nmp-nip65-consumer-check/: Cargo.toml
crates/nmp-nip65-consumer-check/src/: lib.rs
crates/nmp-nip65/src/: claims.rs  lib.rs
crates/nmp-nip65/tests/: live_bootstrap.rs
crates/nmp-nip68/: Cargo.toml
crates/nmp-nip68/src/: build.rs  decode.rs  image.rs  lib.rs
crates/nmp-nip68/tests/: picture_roundtrip.rs
crates/nmp-ownership/: Cargo.toml
crates/nmp-ownership/src/: claim_set.rs  kind_claim.rs  kind_scope.rs  lib.rs  module_id.rs  relay_source.rs  route_class.rs  route_policy.rs
crates/nmp-ownership/tests/: route_class_visibility.rs
crates/nmp-parity/: Cargo.toml
crates/nmp-parity/src/: lib.rs
crates/nmp-parity/tests/: nip22_parity.rs  parity.rs  reference_parity.rs
crates/nmp-resolver/: Cargo.toml
crates/nmp-resolver/examples/: derived_limit_bench.rs
crates/nmp-resolver/src/: engine.rs  eval.rs  graph.rs  ingest_attribution.rs  lib.rs  testkit.rs  types.rs
crates/nmp-resolver/tests/: committed_row_changes.rs  contract.rs  local_write_u2.rs
crates/nmp-signer/: Cargo.toml
crates/nmp-signer/src/: bunker.rs  capability.rs  catalog.rs  lib.rs  local.rs  nip46.rs  op.rs
crates/nmp-signer/tests/: nip46_mock_relay.rs  nip46_scaling_704.rs
crates/nmp-store/: Cargo.toml
crates/nmp-store/examples/: cardinality_query_bench.rs  codec_bench.rs  ingest_bench.rs  packed_postings.rs  query_bench.rs  redb_index_layout.rs  scale_bench.rs  storage_stats.rs  store_decomposition.rs
crates/nmp-store/src/: address_key.rs  binary_event.rs  coverage.rs  ingest_attribution.rs  lib.rs  memory_store.rs  persistent_store_lifetime.rs  redb_store.rs  semantic_oracle.rs
crates/nmp-store/tests/: lane_contract.rs  outbox_contract.rs  store_contract.rs
crates/nmp-test-support/: Cargo.toml
crates/nmp-test-support/src/: lib.rs
crates/nmp-transport/: Cargo.toml
crates/nmp-transport/src/: admission.rs  backoff.rs  health.rs  ingest_attribution.rs  keepalive.rs  lib.rs  pool.rs
crates/nmp-transport/tests/: mock_relay.rs  session_context.rs
nmp-demo/: Cargo.toml
nmp-demo/src/: bootstrap.rs  directory.rs  main.rs
nmp-engine/: Cargo.toml
nmp-engine/src/: lib.rs
nmp-engine/src/core/: attribution.rs  mod.rs
nmp-engine/src/negentropy/: mod.rs
nmp-engine/src/outbox/: mod.rs
nmp-engine/src/runtime/: diagnostics_channel.rs  (+1 more)
nmp-engine/tests/: core_headless.rs  diagnostics_headless.rs  integration_capstone.rs  negentropy_live.rs  runtime_integration.rs  self_bootstrap_outbox.rs  signer_registry_headless.rs
nmp-store/: Cargo.toml
nmp-store/src/: address_key.rs  lib.rs  memory_store.rs
nmp-store/tests/: store_contract.rs
nmp-transport/: Cargo.toml
nmp-transport/src/: backoff.rs  handle.rs  health.rs  keepalive.rs  lib.rs  pool.rs
nmp-transport/tests/: mock_relay.rs
(+787 files in other folders)
