[workspace]
resolver = "2"
members = [
    "crates/nmp-grammar",
    "crates/nmp-ownership",
    "crates/nmp-store",
    "crates/nmp-resolver",
    "crates/nmp-router",
    "crates/nmp-transport",
    "crates/nmp-signer",
    "crates/nmp-engine",
    "crates/nmp",
    "crates/nmp-consumer-check",
    "crates/nmp-demo",
    "crates/nmp-ffi",
    "crates/nmp-bdd",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT"
publish = false

[workspace.dependencies]
nostr = "0.44.4"
# Collision-resistant 256-bit digest for `nmp-grammar::DescriptorHash`
# (network-controlled filter contents feed this via `Binding::Derived`; a
# 64-bit FNV hash is trivially, constructibly collidable and this value is
# both the demand/refcount key AND (via `CoverageKey`) the durable redb
# watermark key -- a forged collision there would attach source evidence to
# the wrong filter).
blake3 = "1"
nmp-grammar = { path = "crates/nmp-grammar" }
nmp-ownership = { path = "crates/nmp-ownership" }
nmp-store = { path = "crates/nmp-store" }
nmp-resolver = { path = "crates/nmp-resolver" }
nmp-router = { path = "crates/nmp-router" }
nmp-transport = { path = "crates/nmp-transport" }
nmp-signer = { path = "crates/nmp-signer" }
nmp-engine = { path = "crates/nmp-engine" }
nmp = { path = "crates/nmp" }
proptest = "1"
uniffi = "0.29"
