[workspace]
resolver = "2"
members = [
    "crates/nmp-grammar",
    "crates/nmp-ownership",
    # workspace-wide kind-ownership audit (routing-and-ownership.md §4.2
    # layer 2); tests only, nothing depends on it.
    "crates/nmp-audit",
    "crates/nmp-store",
    "crates/nmp-resolver",
    "crates/nmp-router",
    "crates/nmp-transport",
    "crates/nmp-executor",
    "crates/nmp-signer",
    "crates/nmp-engine",
    "crates/nmp",
    "crates/nmp-consumer-check",
    "crates/nmp-demo",
    "crates/nmp-ffi",
    "crates/nmp-bdd",
    "crates/nmp-parity",
    "crates/nmp-nip51",
    "crates/nmp-nip02",
    "crates/nmp-nip29",
    # Blossom (BUD-01/02/11) blob-upload core (#545, epic #216 T15-A-BLOSSOM).
    "crates/nmp-blossom",
    # NIP-68 picture-first (kind:20) schema owner (#558, epic #216 T15-B-NIP68-IMETA).
    "crates/nmp-nip68",
    # Staged media composition seam (prepare -> upload -> compose) over the
    # standalone Blossom upload (#559, epic #216 T15-C-MEDIA-COMPOSITION).
    "crates/nmp-media",
    "crates/nmp-content",
    "crates/nmp-test-support",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT"
publish = false

[workspace.dependencies]
nostr = "0.44.4"
# Collision-resistant 256-bit digest for `nmp-grammar::DescriptorHash`
# (network-controlled filter contents feed this via `Binding::Derived`; a
# 64-bit FNV hash is trivially, constructibly collidable and this value is
# both the demand/refcount key AND (via `CoverageKey`) the durable redb
# watermark key -- a forged collision there would attach source evidence to
# the wrong filter).
blake3 = "1"
futures-channel = "0.3"
hickory-resolver = "0.25.2"
httpdate = "1"
nmp-grammar = { path = "crates/nmp-grammar" }
nmp-ownership = { path = "crates/nmp-ownership" }
nmp-store = { path = "crates/nmp-store" }
nmp-resolver = { path = "crates/nmp-resolver" }
nmp-router = { path = "crates/nmp-router" }
nmp-transport = { path = "crates/nmp-transport" }
nmp-executor = { path = "crates/nmp-executor" }
nmp-signer = { path = "crates/nmp-signer" }
nmp-engine = { path = "crates/nmp-engine" }
nmp = { path = "crates/nmp" }
nmp-ffi = { path = "crates/nmp-ffi" }
nmp-bdd = { path = "crates/nmp-bdd" }
nmp-nip51 = { path = "crates/nmp-nip51" }
nmp-nip02 = { path = "crates/nmp-nip02" }
nmp-nip29 = { path = "crates/nmp-nip29" }
nmp-blossom = { path = "crates/nmp-blossom" }
nmp-nip68 = { path = "crates/nmp-nip68" }
nmp-media = { path = "crates/nmp-media" }
nmp-content = { path = "crates/nmp-content" }
nmp-test-support = { path = "crates/nmp-test-support" }
proptest = "1"
uniffi = "0.29"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12.28", default-features = false, features = ["hickory-dns", "rustls-tls-webpki-roots"] }
# BUD-11 `Authorization: Nostr <base64url-no-padding(event JSON)>` encoding
# (#545); already at 0.22.1 in Cargo.lock via transitive resolution.
base64 = "0.22"
