[package]
name = "nmp-demo"
version.workspace = true
edition.workspace = true
license.workspace = true
publish.workspace = true

[[bin]]
name = "nmp-demo"
path = "src/main.rs"

[dependencies]
nostr.workspace = true
nmp-grammar.workspace = true
nmp-store.workspace = true
nmp-resolver.workspace = true
nmp-router.workspace = true
nmp-transport.workspace = true
nmp-signer.workspace = true
nmp-engine.workspace = true
