[package]
name = "nmp-engine"
version.workspace = true
edition.workspace = true
license.workspace = true
publish.workspace = true

[dependencies]
nostr.workspace = true
nmp-grammar.workspace = true
nmp-store.workspace = true
nmp-resolver.workspace = true
nmp-router.workspace = true
nmp-transport.workspace = true
nmp-signer.workspace = true
# The negentropy reconciler is an engine MODULE (`src/negentropy/`), not a
# crate (§1: reducer-coupled, driven turn-by-turn by `EngineCore`) — but it
# wraps this external set-reconciliation crate. See
# `src/negentropy/mod.rs` for a naming gotcha this introduces.
negentropy = { version = "0.5", default-features = false, features = ["std"] }
