[package]
name = "nmp-engine"
version.workspace = true
edition.workspace = true
license.workspace = true
publish.workspace = true

[dependencies]
nostr.workspace = true
nmp-grammar.workspace = true
nmp-store.workspace = true
nmp-resolver.workspace = true
nmp-router.workspace = true
nmp-transport.workspace = true
nmp-signer.workspace = true
# The negentropy reconciler is an engine MODULE (`src/negentropy/`), not a
# crate (§1: reducer-coupled, driven turn-by-turn by `EngineCore`) — but it
# wraps this external set-reconciliation crate. See
# `src/negentropy/mod.rs` for a naming gotcha this introduces.
negentropy = { version = "0.5", default-features = false, features = ["std"] }

[dev-dependencies]
# In-process test relay for the runtime (C) integration tests: reconnection
# replay (test 6) and the end-to-end subscribe/publish/reconnect drive.
# Async under the hood (nostr-sdk); confined to dev-dependencies and
# `#[tokio::test]` -- the production `EngineThread`/`Pool` stay free of any
# imposed runtime (D8). Mirrors `nmp-transport`'s own dev-dependency set
# (see that crate's `tests/mock_relay.rs` for the same version-shadowing
# gotcha noted below).
nostr-relay-builder = "0.45.0-alpha.3"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "time"] }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
