[package]
name = "nmp-transport"
version.workspace = true
edition.workspace = true
license.workspace = true
publish.workspace = true

[dependencies]
# `RelayUrl` lives directly on `nostr` (re-exported by `nmp-router::facts`);
# this crate does not need `nmp-grammar`.
nostr.workspace = true
# HARVEST target (M3 plan §4 "Transport pool"): the old repo's `mio`-driven
# worker-thread pool, kept as the interior async edge so the app never sees
# an imposed runtime (§2). Versions mirror the old repo's pinned stack.
mio = { version = "1", features = ["os-ext", "os-poll"] }
rustls = { version = "0.23", default-features = false, features = ["ring"] }
tungstenite = { version = "0.29", default-features = false, features = [
    "handshake",
    "rustls-tls-webpki-roots",
] }
