[package]
name = "nmp-nostrdb-compare"
version = "0.1.0"
edition = "2021"
publish = false

# Keep the external C dependency out of NMP's normal workspace build.
[workspace]

[dependencies]
blake3 = "1"
libc = "0.2"
memmap2 = "0.9"
nmp-store = { path = "../../crates/nmp-store", features = ["bench-instrumentation"] }
nostr = "0.44.4"
rayon = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[build-dependencies]
cc = "1"
