[package]
name = "nmp-nostrdb-compare"
version = "0.1.0"
edition = "2021"
publish = false

# Keep the external C dependency out of NMP's normal workspace build.
[workspace]

[dependencies]
blake3 = "1"
fjall = "3.1.6"
libc = "0.2"
memmap2 = "0.9"
nmp-store = { path = "../../crates/nmp-store", features = ["bench-instrumentation"] }
nostr = "0.44.4"
rayon = "1"
redb = "4.1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tempfile = "3"

[build-dependencies]
cc = "1"
