[package]
name = "nmp-bdd"
version.workspace = true
edition.workspace = true
license.workspace = true
publish.workspace = true
description = "BDD acceptance layer: cucumber-rs Gherkin scenarios driven against the REAL engine (docs/bdd/000-bdd-approach.md)."

# Test-only crate: no lib target of production value, never depended on by
# any other crate. `src/` is a thin library purely so `tests/bdd.rs` (the
# `harness = false` cucumber entry point) can `use nmp_bdd::...`.
[lib]
name = "nmp_bdd"
path = "src/lib.rs"
doctest = false

[[test]]
name = "bdd"
path = "tests/bdd.rs"
harness = false

[dependencies]
nostr.workspace = true
nmp-grammar.workspace = true
nmp-store.workspace = true
nmp-resolver.workspace = true
nmp-router.workspace = true
nmp-transport.workspace = true
nmp-signer.workspace = true
nmp-engine.workspace = true
nmp-test-support.workspace = true

cucumber = "0.21"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "time", "sync"] }
serde_json = "1"
serde.workspace = true

# The in-process scripted relay (§2.2/§2.3 of the approach doc): the SAME
# `nostr-relay-builder` `LocalRelay` the engine's own `runtime_integration.rs`
# already uses, with its `WritePolicy`/`QueryPolicy` plugin points repurposed
# as the "was this relay ever contacted" world-side observable (independent
# of the engine's own diagnostics self-report -- see `src/relays.rs`).
#
# Deliberately NOT a glob import of its `prelude`: that re-exports a
# DIFFERENT `nostr` (0.45-alpha) than this workspace's pinned `nostr = "0.44.4"`
# -- see `nmp-transport/tests/mock_relay.rs` and
# `nmp-engine/tests/runtime_integration.rs`'s identical comment; every
# cross-version value is bridged explicitly by hex/id string round-trip.
nostr-relay-builder = "0.45.0-alpha.3"
