[package]
name = "nmp-content"
version.workspace = true
edition.workspace = true
license.workspace = true
publish.workspace = true

[dependencies]
nmp-grammar.workspace = true
pulldown-cmark = { version = "0.13", default-features = false }
regex = "1.11"

[dev-dependencies]
proptest.workspace = true
