[package]
name = "nmp-engine"
version.workspace = true
edition.workspace = true
license.workspace = true
publish.workspace = true

[features]
bench-instrumentation = ["nmp-store/bench-instrumentation"]

[[example]]
name = "incremental_delta_bench"
required-features = ["bench-instrumentation"]

[[example]]
name = "local_mutation_delta_bench"
required-features = ["bench-instrumentation"]

[dependencies]
blake3.workspace = true
crossbeam-channel = "0.5"
futures-channel.workspace = true
hickory-resolver.workspace = true
httpdate.workspace = true
nostr.workspace = true
nmp-grammar.workspace = true
nmp-store.workspace = true
nmp-resolver.workspace = true
nmp-router.workspace = true
nmp-transport.workspace = true
nmp-signer.workspace = true
nmp-executor.workspace = true
# The negentropy reconciler is an engine MODULE (`src/negentropy/`), not a
# crate (§1: reducer-coupled, driven turn-by-turn by `EngineCore`) — but it
# wraps this external set-reconciliation crate. See
# `src/negentropy/mod.rs` for a naming gotcha this introduces.
negentropy = { version = "0.5", default-features = false, features = ["std"] }
# NEG-OPEN/NEG-MSG wire payloads are lowercase hex (NIP-77) -- already a
# transitive dependency (via `nostr`/`negentropy`'s own dependency graph);
# named directly here because `negentropy/mod.rs` encodes/decodes reconcile
# messages itself (the external `negentropy` crate is payload-agnostic: it
# only deals in raw bytes, never hex text).
hex = "0.4"
serde.workspace = true
serde_json.workspace = true
reqwest.workspace = true
tokio = { version = "1", features = ["rt", "time", "net", "sync"] }

[dev-dependencies]
nmp-test-support.workspace = true
# In-process test relay for the runtime (C) integration tests: reconnection
# replay (test 6) and the end-to-end subscribe/publish/reconnect drive.
# Async under the hood (nostr-sdk); confined to dev-dependencies and
# `#[tokio::test]` -- the production `EngineThread`/`Pool` stay free of any
# imposed runtime (D8). Mirrors `nmp-transport`'s own dev-dependency set
# (see that crate's `tests/mock_relay.rs` for the same version-shadowing
# gotcha noted below).
nostr-relay-builder = "0.45.0-alpha.3"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "time"] }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
# `watermark_cold_start_offline` (integration_capstone.rs) needs a real
# on-disk `RedbStore` file it can close and reopen across a simulated
# restart -- a throwaway temp dir per test run, same crate `nmp-store`
# already uses for its own `RedbStore` tests.
tempfile = "3"
redb = "4.1"
# `no_deadlines_blocks_indefinitely` (runtime_integration.rs, #39) falsifies
# D8's "no poll-loop timer thread" the only way a black-box test can:
# measuring real process CPU time (`getrusage`) across an idle window, since
# a busy-spinning `recv_timeout(0)` loop would be silently invisible to every
# OTHER assertion available here (no effect crosses the wire when nothing is
# due). Already resolved transitively (mio/tokio/etc.) at the SAME pinned
# version -- this just names it directly for the one test that calls it.
libc = "0.2"
# `neg_liveness_deadline_does_not_busy_spin` (runtime_integration.rs, #39
# fix-up) needs a genuinely uncooperative NIP-77 peer held open for the real
# ~30s liveness window -- `LocalRelay`/`nostr-relay-builder` is a fully
# compliant relay and would converge a real reconciliation long before that,
# so this drives a minimal raw `tungstenite` stub instead (see that test's
# doc). Same version `nmp-transport`'s own production `Pool` speaks on the
# wire (already resolved workspace-wide); this just names it directly for
# the one test that needs to speak it from the SERVER side.
tungstenite = "0.29"
serde_json.workspace = true
serde = { version = "1", features = ["derive"] }
url = "2"
# #108: proves nmp-nip51's active_account_demand() reroots/reconstructs
# correctly against a REAL engine (SetActivePubkey) -- a cross-crate
# integration proof, not something nmp-nip51 itself (deliberately
# engine-free) can assert on its own.
nmp-nip51.workspace = true
# #115: proves nmp-nip29's compose_group_send/group_content_demand route
# correctly against a REAL engine and a real relay (PinnedHost delivery,
# read-back loop) -- the identical cross-crate integration-proof rationale
# as the nmp-nip51 dependency directly above.
nmp-nip29.workspace = true
