[package]
name = "nmp-ffi"
version.workspace = true
edition.workspace = true
license.workspace = true
publish.workspace = true

# M4 plan §2: staticlib for the iOS xcframework, plain lib for the round-trip
# unit tests / the `uniffi-bindgen` bin target below to link against. cdylib
# added for #40 (Kotlin/Flow falsifier) -- UniFFI's Kotlin bindings load the
# core through JNA, which needs a dynamic library (JVM has no static-linking
# story); Swift's own build path (scripts/build-swift-xcframework.sh) still
# only ever asks cargo for the staticlib slices, so this is additive and
# Swift-neutral.
[lib]
crate-type = ["staticlib", "cdylib", "lib"]
name = "nmp_ffi"

# `cargo run -p nmp-ffi --bin uniffi-bindgen generate --library <staticlib> \
#   --language swift --out-dir gen/` (M4 plan §3 step 3, library mode -- reads
# exported metadata straight from the compiled staticlib, no .udl file).
[[bin]]
name = "uniffi-bindgen"
path = "uniffi-bindgen.rs"

[dependencies]
nostr.workspace = true
nmp-grammar.workspace = true
nmp.workspace = true
nmp-signer.workspace = true
uniffi = { workspace = true, features = ["cli"] }
# #108: the read-only NIP-29 host-browser projection. Direct deps here
# (not proxied through the `nmp` facade) -- these stay opt-in, app-chosen
# dependencies at the direct-Rust layer (#63/#45's "opt-in protocol
# crate" framing), but `nmp-ffi` is the ONE staticlib/cdylib every Swift/
# Kotlin app links, so it bundles the projection directly, same treatment
# as `nmp-grammar` itself gets here.
nmp-nip51.workspace = true
nmp-nip02.workspace = true
nmp-nip29 = { workspace = true, features = ["engine"] }
# #572: typed NIP-22 comments over NIP-73 external targets. Engine-free
# (no `engine` feature exists on nmp-nip22 at all -- `comment_intent` takes
# its author explicitly), same direct-dep bundling treatment as
# nmp-nip51/nmp-nip29/nmp-blossom above.
nmp-nip22.workspace = true
nmp-content.workspace = true
# #555 (epic #216 T15-A-BLOSSOM): the opt-in Blossom blob projection, same
# direct-dep treatment as nmp-nip51/nmp-nip29 above -- nmp-ffi is the ONE
# staticlib/cdylib every Swift/Kotlin app links, so it bundles the
# projection without the crate joining the canonical `nmp` facade.
nmp-blossom.workspace = true
# #555: `FfiBlossomAuthorization::validate_signed_event` reassembles an
# `FfiSignedEvent` record into canonical event JSON for nostr's strict
# `Event::from_json` parser (typed refusal on malformed id/sig hex).
serde_json.workspace = true
# #555: `FfiBlossomClient`'s blocking methods each drive the async
# `nmp-blossom` client on a per-call current-thread runtime (the engine's
# `relay_information.rs` `http_runtime()` discipline). Same production
# feature set as nmp-engine's own tokio dependency, minus `sync`.
tokio = { version = "1", features = ["rt", "time", "net"] }

# #99: the corrupt-retained-receipt reattach falsifier needs to write a
# genuinely undecodable row directly into a real `RedbStore` file, the same
# technique `nmp-engine`'s own restart/corruption tests use -- test-only.
[dev-dependencies]
nmp-store.workspace = true
redb = "4.1"
tempfile = "3"
tungstenite = "0.29"
url = "2"
# #680 async observation falsifiers drive the pull-based `next()` futures with a
# real executor. `#[tokio::test]` only, dev-only — production stays runtime-free.
tokio = { version = "1", features = ["rt-multi-thread", "macros", "time"] }
