[package]
name = "nmp-grammar"
version.workspace = true
edition.workspace = true
license.workspace = true
publish.workspace = true

[dependencies]
nostr.workspace = true
# `DescriptorHash`'s collision-resistant digest (see the workspace
# `[workspace.dependencies]` comment for why this replaced 64-bit FNV).
blake3.workspace = true
# Canonical byte encoding fed into `blake3::hash` -- JSON's own string
# quoting/escaping makes field concatenation unambiguous (no framing
# collisions the way naive byte concatenation without length-prefixing
# could have), and every field type here (`BTreeSet`/`BTreeMap`/`Option`)
# already has a `serde::Serialize` impl, so no new derive is needed on
# `ConcreteFilter` itself.
serde_json = "1"
