[package]
name = "nmp-nip29"
version.workspace = true
edition.workspace = true
license.workspace = true
publish.workspace = true

# #63's dependency direction: optional nmp-nip29 -> nmp-nip51 (nmp-nip51
# must contain no NIP-29 behavior; nmp-nip29 consumes its typed kind:10009
# output transitively without claiming that schema). No router/resolver/
# engine dependency, same discipline as nmp-nip51.
[dependencies]
nostr.workspace = true
nmp-grammar.workspace = true
nmp-ownership.workspace = true
nmp-nip51.workspace = true
