[package]
name = "nmp-parity"
version.workspace = true
edition.workspace = true
license.workspace = true
publish.workspace = true
description = "Product-level semantic parity harness for the direct Rust and FFI NMP facades."

[lib]
doctest = false

[dependencies]
nostr.workspace = true
nmp.workspace = true
nmp-ffi.workspace = true
nmp-bdd.workspace = true
nmp-content.workspace = true
nmp-grammar.workspace = true
nmp-nip02.workspace = true
nmp-nip22.workspace = true

[dev-dependencies]
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
# #99: the terminal-retained-receipt reattach scenario needs a real
# `RedbStore` file (an ephemeral receipt abandoned across a genuine
# close/reopen), not an in-memory store.
tempfile = "3"
