[package]
name = "nmp-resolver"
version.workspace = true
edition.workspace = true
license.workspace = true
publish.workspace = true

[features]
bench-instrumentation = ["dep:libc", "nmp-store/bench-instrumentation"]

[dependencies]
nostr.workspace = true
nmp-grammar.workspace = true
nmp-store.workspace = true
libc = { version = "0.2", optional = true }
